--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<title>熟知宇某</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/header_nav.css">
+	<link rel="stylesheet" href="css/content.css">
+	<link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 	<div class="header">
-		
+		<div class="photo_d">
+			
+		</div>
+		<div class="name_d">
+			熟知宇某
+			<div class="want_d">
+				求职意向：XXXX
+			</div>
+		</div>
 	</div>
+
 	<div class="nav">
 		<ul class="nav_first">
 			<li><a href="">熟知宇某1</a>
@@ -46,8 +58,65 @@
 			</li>
 		</ul>
 	</div>
+
 	<div class="content">
-		
+		<!-- 详细信息 -->
+		<div class="details_info">
+			<div class="self_eva">
+				自我评价
+			</div>
+			<p>
+				本人对待工作认真负责，善于沟通、协调有较强的组织能力与团队精神;活泼开朗、乐观上进、有爱心并善于施教并行;上进心强、勤于学习能不断提高自身的能力与综合素质。在未来的工作中，我将以充沛的精力，刻苦钻研的精神来努力工作，稳定地提高自己的工作能力,熟知宇某、熟知宇某、熟知宇某、熟知宇某、熟知宇某、熟知宇某、熟知宇某、熟知宇某、熟知宇某、熟知宇某...
+			</p>
+
+			<div class="school_story">
+				校内实践
+			</div>
+			<p>
+				熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历...
+			</p>
+
+			<div class="skill">
+				技能说明
+			</div>
+			<p>
+				熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历...
+			</p>
+
+			<div class="edu">
+				教育背景
+			</div>
+			<p>
+				熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历、熟知宇某简历...
+			</p>
+		</div>
+
+		<!-- 基本信息 -->
+		<div class="general_info">
+			<div class="base_title">
+				基本信息
+			</div>
+			<div class="base_info">
+				政治面貌：中共党员<br>
+				年龄：22岁<br>
+				电话：132 **** ****<br>
+				邮箱：sqdcyh@gmail.com<br>
+				地址：佛山南海<br>
+			</div>
+
+			<div class="all_skill_title">
+				附加技能
+			</div>
+			<div class="all_skill">
+				<div class="lang">
+					<span style="font-weight: bold;">语言:</span>
+					<div class="c">C<div class="c_box"></div>
+					<div class="c">C<div class="c_box"></div>
+					<div class="c">C<div class="c_box"></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<div class="footer">
